--- a/CleanGame/CleanGame.csproj
+++ b/CleanGame/CleanGame.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Game\Core\Components\AIComponent.cs" />
     <Compile Include="Game\Core\Components\AOEComponent.cs" />
     <Compile Include="Game\Core\Components\BorderComponent.cs" />
+    <Compile Include="Game\Core\Components\ArcherComponent.cs" />
     <Compile Include="Game\Core\Components\GrenadeComponent.cs" />
     <Compile Include="Game\Core\Components\InventoryComponent.cs" />
     <Compile Include="Game\Core\Components\LaserComponent.cs" />
